fix grid layout in results page and space character parsing in backend

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
   
+/* For dev */
+* {
+    border: 1px solid black;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
