left/right buttons for results page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,9 @@
 @tailwind components;
 @tailwind utilities;
   
-/* For dev */
-* {
+/* * {
     border: 1px solid black;
-}
+} */
 
 /* width */
 ::-webkit-scrollbar {
