--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
   
+* {
+    overscroll-behavior-y: none;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
