--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
   
-* {
+/* * {
     overscroll-behavior-y: none;
-}
+} */
 
 /* width */
 ::-webkit-scrollbar {
